[package]
name = "hermit-lib"
version = "0.1.0"
edition = "2021"
authors = ["Michael Yang <admin@my4ng.dev>"]
readme = "README.md"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "~1.12", features = ["attributes"] }
futures = "~0.3"
tracing = "~0.1"
thiserror = "~1.0"
ring = "~0.16"

[dev-dependencies]
hex = "~0.4"