[package]
name = "hermit-lib"
version = "0.1.0"
edition = "2021"
authors = ["Michael Yang <admin@my4ng.dev>"]
readme = "README.md"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "~1.12", features = ["attributes"] }
chrono = "~0.4"
ciborium = "~0.2"
niceware = "~1.0"
futures = "~0.3"
futures-io = "~0.3"
quinn = { version = "~0.10", features = ["async-std", "futures-io"] }
tracing = "~0.1"
thiserror = "~1.0"
ring = "~0.16"

[dev-dependencies]
hex = "~0.4"